whitespace fix in style.scss

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,6 @@ html {
 
 body {
   margin: 0 auto;
-  width: 960px;
   height: 100%; }
 
 article {
@@ -27,6 +26,7 @@ a:hover {
   color: #fdba95; }
 
 #main {
+  max-width: 960px;
   height: 100%; }
 
 #main #title {
@@ -180,9 +180,9 @@ a:hover {
   text-indent: -9999px; }
 
 /*#main #page #content .prizes .prize h5 {
-	width:445px;
-	height:125px;
-	text-indent:-9999px;
+  width:445px;
+  height:125px;
+  text-indent:-9999px;
 }*/
 #main #page #content .prizes .grand h5 {
   background: url(../img/grand_prize.png) no-repeat; }
